Fix topic QuickPost * The display: none rule, which shouldn't be here, no longer gets   overridden by the setting of style.display, so it never gets shown if   the user is blocking GameFAQs' stylesheets (which include a display:   block rule for divs). My bad. * Wrap the setSelectionRange call in a try/catch. The aforementioned bug   caused the script to fail here. There are other cases where this call is   known to fail (using Firebug, etc).

--- a/content/css/gamefox-quickpost.css
+++ b/content/css/gamefox-quickpost.css
@@ -9,7 +9,6 @@
     {
         position: fixed;
         z-index: 3;
-        display: none;
         width: 75%;
         max-width: 725px;
         border: #aaa 1px solid;
